--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
   const passwords = [
     {
       pass: "devraj",
-      page: "https://devrajpoddar.github.io/SolutionHub/index1.html"
+      page: "https://devrajpoddar.github.io/SolutionHub/index1"
       },
     {
       pass: "Devraj",
-      page: "https://devrajpoddar.github.io/SolutionHub/index2.html"
+      page: "https://devrajpoddar.github.io/SolutionHub/index2"
       },
     {
       pass: "anotherpassword",
