--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
   
   const passwords = [
     {
-      pass: "devraj",
+      pass: "Tejas",
       page: "https://devrajpoddar.github.io/SolutionHub/index1"
       },
     {
       pass: "Devraj",
-      page: "https://devrajpoddar.github.io/SolutionHub/index2"
+      page: "https://devilisit.github.io/index2"
       },
     {
       pass: "anotherpassword",
