--- a/index2.html
+++ b/index2.html
@@ -28,28 +28,52 @@
 				</a>
 			</li>
 			<li>
-				<a href="soon.html">
+				<a href="https://bhuvan-app1.nrsc.gov.in/disaster/disaster.php?id=landslide_monitor">
 					<i class='bx bxs-doughnut-chart' ></i>
-					<span class="text">Analytics</span>
+					<span class="text">Mapping</span>
 				</a>
 			</li>
 			<li>
-				<a href="soon.html">
-					<i class='bx bxs-shopping-bag-alt' ></i>
-					<span class="text">Updates</span>
-				</a>
+			  <a href="precautions.html">
+			    <i class='bx bxs-check-shield'></i>
+			    <span class="text">Precautions</span>
+			  </a>
 			</li>
 			<li>
-				<a href="soon.html">
-					<i class='bx bxs-group' ></i>
-					<span class="text">About Us</span>
+				<a href="updates.html">
+					<i class='bx bxs-download' ></i>
+					<span class="text">Future Updates</span>
 				</a>
+			</li>
+			<li class="">
+			<a href="Feedback.html">
+			  <i class='bx bxs-message-dots'></i>
+			  <span class="text">Feedbacks</span>
+			</a>
+			</li>
+			<li>
+			<a href="Help.html">
+			  <i class='bx bxs-shopping-bag-alt'></i>
+			  <span class="text">HelpDesk</span>
+			</a>
+			</li>
+			<li>
+			<a href="Others.html">
+			  <i class='bx bxs-brain'></i>
+			  <span class="text">Other Features</span>
+			</a>
 			</li>
 		</ul>
 		<ul class="side-menu">
 			<li>
-				<a href="soon.html">
-					<i class='bx bxs-message-dots' ></i>
+				<a href="AboutUs.html">
+					<i class='bx bxs-group' ></i>
+					<span class="text">About Us</span>
+				</a>
+			</li>
+			<li>
+				<a href="FAQ.html">
+					<i class='bx bx-question-mark' ></i>
 					<span class="text">FAQs</span>
 				</a>
 			</li>
@@ -61,6 +85,7 @@
 			</li>
 		</ul>
 	</section>
+
 	<!-- SIDEBAR -->
 
 
