--- a/Others.html
+++ b/Others.html
@@ -148,7 +148,7 @@
 					<span class="text">
 						<h3>Altitude Calculator</h3>
 						<p>It could tell you the altitude of any structure <br><a style="color: indianred"  href="Altitude.html">Click here</a>
-						 <br><a style="color: indianred"  href="">Click here</a></p>
+						 <br><a style="color: indianred"  href="Altitude1.html">Click here</a></p>
 					</span>
 				</li>
 				<li>
